--- a/contacts.html
+++ b/contacts.html
@@ -104,7 +104,7 @@
     padding: 40px;
     flex-wrap: wrap;
     cursor: pointer;
-    background-image: url('tuwuwuw.png');  
+    background-image: url('pictures.html/tuwuwuw.png');  
   }
 
   .contact-item {
@@ -237,7 +237,7 @@
   <nav class="navbar">
     <div class="navbar-wrapper" id="navbarWrapper">
       <div class="brand">
-        <img src="2.png" alt="Logo" />
+        <img src="pictures.html/2.png" alt="Logo" />
         <span>CONTACT</span>
       </div>
 
