--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
     .hero {
       background-color: #e7c8aa;
-      background-image: url('background.jpg');
+      background-image: url('images/background.jpg');
       background-size: cover;
       background-position: center;
       background-repeat: no-repeat;
@@ -242,7 +242,7 @@
     <nav class="navbar">
       <div class="navbar-wrapper" id="navbarWrapper">
         <div class="brand">
-        <img src="2.png" alt="Logo" />
+        <img src="images/download.jpg" alt="Logo" />
         <span>HOME</span>
         </div>
 
@@ -270,7 +270,7 @@
       <h2 class="featured-title">Featured Treats</h2>
         <div class="featured-grid">
           <div class="featured-item">
-            <img src="4.png" alt="Cupcakes" class="featured-img" />
+            <img src="images/4.png" alt="Cupcakes" class="featured-img" />
             <div class="featured-content">
             <h5 class="featured-name">Cakes</h5>
             <a href="productmem.html#cake" class="featured-btn">View</a>
@@ -278,7 +278,7 @@
           </div>
 
           <div class="featured-item">
-            <img src="3-cupcake.png" alt="Cakes" class="featured-img" />
+            <img src="images/3-cupcake.jpeg" alt="Cakes" class="featured-img" />
             <div class="featured-content">
             <h5 class="featured-name">Cupcakes</h5>
             <a href="productmem.html#cupcake" class="featured-btn">View</a>
@@ -286,7 +286,7 @@
           </div>
         
           <div class="featured-item">
-            <img src="5-other baked.png" alt="Other Baked Goods" class="featured-img" />
+            <img src="images/5-other baked.png" alt="Other Baked Goods" class="featured-img" />
             <div class="featured-content">
             <h5 class="featured-name">Donuts</h5>
             <a href="productmem.html#donut" class="featured-btn">View</a>
