--- a/aboutuwu.html
+++ b/aboutuwu.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Sweet Treats by Khay</title>
-  <link rel="shortcut icon" href="2.png" />
+  <link rel="shortcut icon" href="images/2.png" />
   <style>
     body {
       font-family: 'Playfair Display', serif;
@@ -193,7 +193,15 @@
       from {opacity: 0; transform: translateY(20px);}
       to {opacity: 1; transform: translateY(0);}
     }
-    
+
+    .fade-in {
+      opacity: 0;
+    }
+
+    .fade-in.visible {
+      animation: fadeIn 0.8s ease forwards;
+    }
+
     @media (max-width: 768px) {
       .navbar-toggler {
         display: block;
@@ -223,7 +231,7 @@
     <nav class="navbar">
       <div class="navbar-wrapper" id="navbarWrapper">
         <div class="brand">
-          <img src="images\download.jpg" alt="Logo" />
+          <img src="images/download.jpg" alt="Logo" />
           <span>ABOUT</span>
         </div>
 
@@ -244,10 +252,10 @@
     <section class="about-bg">
       <div class="about-back">
         <h1 class="fade-in">About Us</h1>
-          <div class="divider"></div>
+        <div class="divider"></div>
 
         <div class="image-text-container fade-in">
-          <img src="/images/Bago.png" alt="about-background">
+          <img src="images/Bago.jpg" alt="about-background">
           <p>Sweet Treats by Khay is a home-based cake shop offering beautifully crafted baked goods for every occasion. From cupcakes and cookies to celebration cakes, each treat is made with care and creativity. The shop also accepts customization requests to match any theme, preference, or special event. Whether it's a birthday, anniversary, or just a craving for something sweet—Sweet Treats by Khay is ready to deliver delightful desserts made with love.</p>
         </div>
 
@@ -263,7 +271,6 @@
     </section>
   </main>
 
-
   <footer class="footer-con">
     <div>
       <small>&copy; 2024 Sweet Treats by Khay</small>
@@ -271,7 +278,6 @@
     </div>
   </footer>
 
- 
   <script>
     const toggle = document.getElementById("menuToggle");
     const navMenu = document.getElementById("navMenu");
