--- a/contacts.html
+++ b/contacts.html
@@ -255,7 +255,7 @@
   <nav class="navbar">
     <div class="navbar-wrapper" id="navbarWrapper">
       <div class="brand">
-        <img src="/images/2.png" alt="Logo" />
+        <img src="images/2.png" alt="Logo" />
         <span>CONTACT</span>
       </div>
 
@@ -294,7 +294,7 @@
     </div>
 
     <div class="contact-item">
-      <a href="https://www.facebook.com/YourPageName" target="_blank" class="contact-button">
+      <a href="https://www.facebook.com/SweetTreatsbyKhay" target="_blank" class="contact-button">
         <i class="fa-brands fa-facebook"></i> Facebook
       </a>
       <p>Sweet Treats by Khay</p>
