--- a/aboutuwu.html
+++ b/aboutuwu.html
@@ -231,7 +231,7 @@
     <nav class="navbar">
       <div class="navbar-wrapper" id="navbarWrapper">
         <div class="brand">
-          <img src="images/download.jpg" alt="Logo" />
+          <img src="./images/download.jpg" alt="Logo" />
           <span>ABOUT</span>
         </div>
 
@@ -255,7 +255,7 @@
         <div class="divider"></div>
 
         <div class="image-text-container fade-in">
-          <img src="images/Bago.jpg" alt="about-background">
+          <img src="./images/Bago.jpg" alt="about-background">
           <p>Sweet Treats by Khay is a home-based cake shop offering beautifully crafted baked goods for every occasion. From cupcakes and cookies to celebration cakes, each treat is made with care and creativity. The shop also accepts customization requests to match any theme, preference, or special event. Whether it's a birthday, anniversary, or just a craving for something sweet—Sweet Treats by Khay is ready to deliver delightful desserts made with love.</p>
         </div>
 
