--- a/contacts.html
+++ b/contacts.html
@@ -255,7 +255,7 @@
   <nav class="navbar">
     <div class="navbar-wrapper" id="navbarWrapper">
       <div class="brand">
-        <img src="images/2.png" alt="Logo" />
+        <img src="./images/2.png" alt="Logo" />
         <span>CONTACT</span>
       </div>
 
