--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Sweet Treats by Khay</title>
-  <link rel="shortcut icon" href="2.png" />
+  <link rel="icon" href="2.png" type="image/png" />
   <style>
     body {
       font-family: 'Playfair Display', serif;
@@ -259,7 +259,6 @@
 
     .footer-con a:hover {
       color: #ffdf9e;
-      text-shadow: 0 0 5px #ffe0b3;
     }
 
     @keyframes fadeIn {
