--- a/developers.html
+++ b/developers.html
@@ -166,7 +166,6 @@
 
     .footer-con a:hover {
       color: #ffdf9e;
-      text-shadow: 0 0 5px #ffe0b3;
     }
 
     @keyframes fadeIn {
@@ -272,7 +271,7 @@
   <footer class="footer-con">
     <div>
       <small>&copy; 2024 Sweet Treats by Khay</small>
-      <p>Website by <a href="developers.html">Code and Cakes</a></p>
+      <p>Website by <a href="developers">Code and Cakes</a></p>
     </div>
   </footer>
 
