--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
         <button class="navbar-toggler" id="menuToggle">&#9776;</button>
 
         <ul class="nav-collapse" id="navMenu">
-          <li><a class="nav-link" href="mimi.html">HOME</a></li>
+          <li><a class="nav-link" href="index.html">HOME</a></li>
           <li><a class="nav-link" href="aboutuwu.html">ABOUT</a></li>
           <li><a class="nav-link" href="productmem.html">PRODUCT</a></li>
           <li><a class="nav-link" href="contacts.html">CONTACT</a></li>
