--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Sweet Treats by Khay</title>
-  <link rel="icon" href="2.png" type="image/png" />
+  <link rel="shortcut icon" href="./images/2.png" />
   <style>
     body {
       font-family: 'Playfair Display', serif;
