--- a/faqs.html
+++ b/faqs.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sweet Treats by Khay</title>
     <title>Sweet Treats by Khay</title>
-  <link rel="shortcut icon" href="2.png" />
+     <link rel="shortcut icon" href="./images/2.png" />
 </head>
 <style>
 body {
