--- a/developers.html
+++ b/developers.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Sweet Treats by Khay</title>
-  <link rel="shortcut icon" href="2.png" />
+  <link rel="shortcut icon" href="./images/2.png" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   <style>
     body {
@@ -166,7 +166,6 @@
 
     .footer-con a:hover {
       color: #ffdf9e;
-      text-shadow: 0 0 5px #ffe0b3;
     }
 
     @keyframes fadeIn {
