--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Sweet Treats by Khay</title>
-  <link rel="shortcut icon" href="./images/2.png" />
+  <link rel="icon" href="2.png" type="image/png" />
   <style>
     body {
       font-family: 'Playfair Display', serif;
@@ -281,7 +281,7 @@
         <button class="navbar-toggler" id="menuToggle">&#9776;</button>
 
         <ul class="nav-collapse" id="navMenu">
-          <li><a class="nav-link" href="index.html">HOME</a></li>
+          <li><a class="nav-link" href="mimi.html">HOME</a></li>
           <li><a class="nav-link" href="aboutuwu.html">ABOUT</a></li>
           <li><a class="nav-link" href="productmem.html">PRODUCT</a></li>
           <li><a class="nav-link" href="contacts.html">CONTACT</a></li>
