--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
   <main>
     <section class="hero" id="heroSection">
       <h1>Sweet Treats <br> by Khay</h1>
-      <p>Baked with love, delivered with joy</p>
+      <p>Bakes customized cakes with love, and delivered it with joy</p>
     </section> 
 
   <section class="featured-section">
